acrescentando o dark-thema no projeto

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Desafio HTML</title>
 </head>
 <body>
+    <div class="dark-mode">
+        <button id="btn">Dark Thema</button>
+    </div>
     <h1>Está é uma tag "h1" e o h1 está com ênfase</h1>
     <br>
     <p> Isto é um parágrafo </p>
@@ -47,12 +50,11 @@
     <p><a href="https://smartquotesforsmartpeople.com/">Cuidado com a tipografia.</a> Você precisa ter atenção com aspas que está usando meu jovem! <br>
     E por favor, use fontes que não sejam Times New Roman em seus projetos.</p>
     <br>
-    <p>"The student searches the word for meaning. The master finds worlds of meaning in the search."  Unknown</p>
+    <blockquote>
+        <p>"The student searches the world for meaning. The master finds worlds of meaning in the search." — Unknown<p>
+      </blockquote>
     <br>
     <hr>
-
-
-
-
+    <script src="script.js"></script>
 </body>
 </html>
