refatorando o arquivo HTML e CSS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +9,24 @@
     <link rel="stylesheet" href="style.css">
     <title>Desafio HTML</title>
 </head>
+
 <body>
     <div class="dark-mode">
         <button id="btn">Dark Thema</button>
     </div>
+
     <h1>Está é uma tag "h1" e o h1 está com ênfase</h1>
     <br>
+
     <p> Isto é um parágrafo </p>
     <br>
+
     <h2 id="text_1">Isto é um h2 com atributo id</h2>
     <br>
+
     <p id="negrito">Este parágrafo está em negrito e tem o seguinte trecho de código: console.log('foobar')</p>
     <br>
+
     <p> Este parágrafo contém um link para
         <a href="https://www.google.com">https://www.google.com.br/</a>
     </p>
@@ -32,29 +39,50 @@
         <li>Este é mais um item da lista</li>
         <li>Este é mais um item da lista</li>
     </ul>
-
     <br>
+
     <h3 id="text_2">Isto é um h3 com atributo id</h3>
     <br>
+
     <p>Isto é um parágrafo</p>
     <br>
+
     <h2 id="text_3">Isto é um h2 com atributo id</h2>
     <br>
-    <p>Isto é um parágrafo que fala sobre a abreviação <abbr title="HTML">HTML</abbr> e a importância do atributo <a href="https://html.spec.whatwg.org/multipage/dom.html#the-lang-and-xml:lang-attributes">Lang</a>
+
+    <p>Isto é um parágrafo que fala sobre a abreviação
+        <abbr title="HTML">HTML </abbr> e a importância do atributo
+        <a href="https://html.spec.whatwg.org/multipage/dom.html#the-lang-and-xml:lang-attributes">
+            Lang
+        </a>
     </p>
     <br>
-    <p>Este video demonstra<a href="https://www.youtube.com/watch?v=NP94u7y_KkQ"> um leitor de tela lendo uma página</a> sem o idioma definido</p>
+
+    <p>Este video demonstra
+        <a href="https://www.youtube.com/watch?v=NP94u7y_KkQ">
+            um leitor de tela lendo uma página
+        </a> sem o idioma definido
+    </p>
     <br>
+
     <h2 id="text_4">Isto é um h2 com um id</h2>
     <br>
-    <p><a href="https://smartquotesforsmartpeople.com/">Cuidado com a tipografia.</a> Você precisa ter atenção com aspas que está usando meu jovem! <br>
-    E por favor, use fontes que não sejam Times New Roman em seus projetos.</p>
+
+    <p>
+        <a href="https://smartquotesforsmartpeople.com/">
+            Cuidado com a tipografia.
+        </a> Você precisa ter atenção com aspas que está usando meu jovem!
+        <br>
+        E por favor, use fontes que não sejam Times New Roman em seus projetos.
+    </p>
     <br>
+
     <blockquote>
         <p>"The student searches the world for meaning. The master finds worlds of meaning in the search." — Unknown<p>
-      </blockquote>
+    </blockquote>
     <br>
     <hr>
     <script src="script.js"></script>
 </body>
+
 </html>
